@@ -16,18 +16,19 @@
 
 package org.springframework.aot.test;
 
-import java.util.Collections;
+import java.util.Map;
 
 import org.junit.jupiter.api.Test;
 
 import org.springframework.boot.SpringBootConfiguration;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.context.SpringBootTestContextBootstrapper;
 import org.springframework.context.ApplicationContext;
+import org.springframework.test.context.BootstrapContext;
+import org.springframework.test.context.BootstrapTestUtils;
 import org.springframework.test.context.MergedContextConfiguration;
 import org.springframework.test.context.SmartContextLoader;
+import org.springframework.test.context.TestContextBootstrapper;
 import org.springframework.test.context.cache.DefaultCacheAwareContextLoaderDelegate;
-import org.springframework.test.context.support.DefaultBootstrapContext;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
@@ -40,25 +41,26 @@ import static org.mockito.Mockito.verifyNoInteractions;
  * Tests for {@link AotCacheAwareContextLoaderDelegate}.
  *
  * @author Stephane Nicoll
+ * @author Sam Brannen
  */
 class AotCacheAwareContextLoaderDelegateTests {
 
 	@Test
-	void loadContextWithMatchDelegateToSmartContextLoader() throws Exception {
+	void loadContextWithMatchDelegatesToSmartContextLoader() throws Exception {
 		ApplicationContext applicationContext = mock(ApplicationContext.class);
 		SmartContextLoader contextLoader = mockSmartContextLoader(applicationContext);
 		AotCacheAwareContextLoaderDelegate delegate = new AotCacheAwareContextLoaderDelegate(
-				Collections.singletonMap(SampleTest.class.getName(), () -> contextLoader));
+				Map.of(SampleTest.class.getName(), () -> contextLoader));
 		assertThat(delegate.loadContextInternal(createMergedContextConfiguration(SampleTest.class))).isSameAs(applicationContext);
 		verify(contextLoader).loadContext(any(MergedContextConfiguration.class));
 	}
 
 	@Test
-	void loadContextWithNoMatchUseDefaultBehavior() throws Exception {
+	void loadContextWithNoMatchUsesDefaultBehavior() throws Exception {
 		ApplicationContext applicationContext = mock(ApplicationContext.class);
 		SmartContextLoader contextLoader = mockSmartContextLoader(applicationContext);
 		AotCacheAwareContextLoaderDelegate delegate = new AotCacheAwareContextLoaderDelegate(
-				Collections.singletonMap(SampleTest.class.getName(), () -> contextLoader));
+				Map.of(SampleTest.class.getName(), () -> contextLoader));
 		ApplicationContext actual = delegate.loadContextInternal(createMergedContextConfiguration(SampleAnotherTest.class));
 		assertThat(actual).isNotNull();
 		verifyNoInteractions(contextLoader);
@@ -76,26 +78,23 @@ class AotCacheAwareContextLoaderDelegateTests {
 	}
 
 	private MergedContextConfiguration createMergedContextConfiguration(Class<?> testClass) {
-		SpringBootTestContextBootstrapper bootstrapper = new SpringBootTestContextBootstrapper();
-		bootstrapper.setBootstrapContext(new DefaultBootstrapContext(testClass, new DefaultCacheAwareContextLoaderDelegate()));
-		return bootstrapper.buildMergedContextConfiguration();
+		BootstrapContext buildBootstrapContext = BootstrapTestUtils.buildBootstrapContext(testClass, new DefaultCacheAwareContextLoaderDelegate());
+		TestContextBootstrapper testContextBootstrapper = BootstrapTestUtils.resolveTestContextBootstrapper(buildBootstrapContext);
+		return testContextBootstrapper.buildMergedContextConfiguration();
 	}
 
 
 	@SpringBootTest(properties = "spring.main.web-application-type=none")
 	static class SampleTest {
-
 	}
 
 	@SpringBootTest(properties = "spring.main.web-application-type=none")
 	static class SampleAnotherTest {
-
 	}
 
 
 	@SpringBootConfiguration
 	static class SampleConfiguration {
-
 	}
 
 }
